<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="25dp"
                android:visibility="invisible"
                android:gravity="end"
                android:text="@string/skip_text"
                android:textColor="#4a4a4a"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome_screen_text"
                android:textColor="#4a4a4a"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/welcome_screen_sub_text"
                android:textColor="#2c292c"
                android:textSize="12sp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="286dp"
                android:layout_height="257dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/welcome_screen_img" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>