<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sun_set_img">

    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content">-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@null"
        android:theme="@style/AppToolbar">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
            <!--                android:layout_marginEnd="20dp"-->

            <ImageView
                android:id="@+id/filter"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_hourglass_empty_white_36dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_parameter_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/search_parameters"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/clear_text"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_cancel_black_36dp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <!--    </com.google.android.material.appbar.AppBarLayout>-->

    <!--
        <include layout="@layout/content_user" />
    -->
    <include
        layout="@layout/active_plans_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_layout"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/colorMetaTheme"
        android:visibility="gone"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:src="@drawable/ic_sensors_white_36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_sensors"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:src="@drawable/ic_dashboard_white_36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_dashboard"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:src="@drawable/ic_sensors_white_36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_plan"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>